--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@stytch/stytch-react": "^4.1.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "cookies": "^0.8.0",
