added web 3 libs and code

--- a/package.json
+++ b/package.json
@@ -16,21 +16,26 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tanstack/react-query": "^4.3.4",
+    "@tanstack/react-query-devtools": "^4.3.5",
     "autoprefixer": "^10.4.7",
-    "axios": "^0.27.2",
-    "cookies": "^0.8.0",
-    "ethers": "^5.6.9",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.7",
     "stytch": "^5.10.0",
     "tailwindcss": "^3.1.6",
-    "xstream": "^11.14.0"
+    "wagmi": "^0.6.5",
+    "@account-abstraction/contracts": "^0.2.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "ethers": "^5.7.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
