--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@account-abstraction/contracts": "^0.2.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
     "@headlessui/react": "^1.7.0",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.10",
@@ -18,7 +24,9 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.3.4",
     "@tanstack/react-query-devtools": "^4.3.5",
+    "@worldcoin/id": "^0.8.0",
     "autoprefixer": "^10.4.7",
+    "ethers": "^5.7.0",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "postcss": "^8.4.14",
@@ -28,14 +36,7 @@
     "react-qr-code": "^2.0.7",
     "stytch": "^5.10.0",
     "tailwindcss": "^3.1.6",
-    "wagmi": "^0.6.5",
-    "@account-abstraction/contracts": "^0.2.0",
-    "@ethersproject/abstract-provider": "^5.7.0",
-    "@ethersproject/abstract-signer": "^5.7.0",
-    "@ethersproject/networks": "^5.7.0",
-    "@ethersproject/properties": "^5.7.0",
-    "@ethersproject/providers": "^5.7.0",
-    "ethers": "^5.7.0"
+    "wagmi": "^0.6.5"
   },
   "devDependencies": {
     "eslint": "8.19.0",
