--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.7.0",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.10",
+    "@lukemorales/query-key-factory": "^0.6.0",
     "@stytch/stytch-react": "^4.1.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
