--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query-devtools": "^4.3.5",
     "@worldcoin/id": "^0.8.0",
     "autoprefixer": "^10.4.7",
+    "currency.js": "^2.0.4",
     "ethers": "^5.7.0",
     "lodash": "^4.17.21",
     "next": "12.2.2",
@@ -34,6 +35,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-mini-chart": "^0.1.3",
     "react-qr-code": "^2.0.7",
     "stytch": "^5.10.0",
     "tailwindcss": "^3.1.6",
