--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-mini-chart": "^0.1.3",
     "react-qr-code": "^2.0.7",
+    "react-vis": "^1.11.7",
     "stytch": "^5.10.0",
     "tailwindcss": "^3.1.6",
     "wagmi": "^0.6.5"
