--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.3.4",
     "@tanstack/react-query-devtools": "^4.3.5",
+    "@web3modal/ethereum": "^2.0.0-alpha.2",
+    "@web3modal/react": "^2.0.0-alpha.2",
     "@worldcoin/id": "^0.8.0",
     "autoprefixer": "^10.4.7",
     "currency.js": "^2.0.4",
