--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-loading-icons": "^1.1.0",
     "react-qr-code": "^2.0.7",
     "react-vis": "^1.11.7",
     "stytch": "^5.10.0",
